--- a/assests/style.css
+++ b/assests/style.css
@@ -1,12 +1,16 @@
+/* root to establish the background color, font size and font family of the website*/
+
 :root{
     background-color: blanchedalmond;
     font-size: 20px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
+/* Tex transformation to keep the title of each project in uppercase */
 
 h3{
     text-transform:uppercase;
 }
-
+/* settings to create a card for the first project.  This card is meant to be much bigger than the other projects */
 .card {
     border: 2px solid black ;
     border-radius: 2px;
@@ -14,7 +18,7 @@ h3{
     flex-grow: 1;
     margin: 2px;
 }
-
+/* Card CSS for the other projects that need to be smaller than the first project*/
 .row {
     display: flex;
     flex-direction: row;
@@ -22,7 +26,7 @@ h3{
     margin: 2px;
     justify-content: space-between;
 }
-
+/* Used for the navigation links at the top of the page */
 nav ul li {
     display: inline-block;
     overflow-wrap: break-word;
@@ -33,27 +37,25 @@ nav ul li {
     text-decoration: none;
     padding-right: 15px;
 }
-
+/* Used to keep the name of the portfolio on the left but the navigation links to the right. */
 header {
     display: flexbox;
     width: 100%;
     margin: 0 auto;
     padding: 20px;
     padding-bottom: 15px;
-    background: var(--foreground);
-    color: var(--content);
     word-wrap: wrap;
     overflow: hidden;
 }
-
+/* Center the text of the page*/
 ul{
     text-align: center;
 }
-
+/* used to center the images and icons used on the page*/
 .justify-center {
     justify-content: center;
   }
-
+/* Used to create the flexbox and borders around the flexbox */
 .box {
     display: flex;
     background-color: #c4bdff;
@@ -63,7 +65,7 @@ ul{
     border: 5px;
     margin: 10px; 
 }
-
+/* Creates the title of each section. */
 .box-title {
     border: 1px solid black;
     flex-wrap: wrap;
@@ -72,10 +74,31 @@ ul{
     background-color: #42f5e0;
     border-radius: 1px;
 }
-
-
-
+/* Used to center the header3 which is the header for each card*/
 h3 {
     text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+    /* on tablets, set columns to only be 50% of the width and not grow */
+    .card-column {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+ /* select the last child to grow to full width if it has space to grow */
+ .card-column:last-child {
+    flex-grow: 1;
+  }
+}
+
+/* media query for larger screens */
+@media screen and (min-width: 992px) {
+    header {
+      width: 75%;
+    }
+  
+    .card-column {
+      flex: 0 0 33.333%;
+      max-width: 33.333%;
+    }
+  }
